force-app/main/default/objects/Concert__c/fields/Available_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Available_Tickets__c</fullName>
    <label>Available Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>