force-app/main/default/objects/Concert__c/fields/Paid_Booking__c.field-meta.xml
<CustomField>
    <fullName>Paid_Booking__c</fullName>
    <label>Paid Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>