force-app/main/default/objects/Concert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Concert_Date__c</columns>
    <columns>Available_Tickets__c</columns>
    <columns>Paid_Booking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>